# ops-devbox-examples

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci-ws-go.yml  ci-ws-lua.yml  ci-ws-node.yml  ci-ws-python.yml  ci-ws-rust.yml  ci-ws-zig.yml  ci.yml
ws-go/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  devbox.json  go.mod
ws-go/src/: primes.go  primes_test.go
ws-k8s/: Makefile  README.md  devbox.json
ws-lua/: .luacheckrc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  devbox.json
ws-node/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  biome.json  devbox.json  package-lock.json  package.json  tsconfig.json
ws-python/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  devbox.json  pyproject.toml
ws-python/.github/workflows/: ci.yml
ws-python/scripts/devbox/: dbx_init.sh
ws-python/scripts/devbox/init/os_darwin/: override.sh
ws-python/scripts/devbox/lib/: common.sh
ws-python/src/primes_cli/: __main__.py  main.py  primes.py  test_primes.py
ws-python/tests/: integration_test.py
ws-rust/: .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  devbox.json  rust-toolchain.toml
ws-rust/.github/workflows/: ci.yml
ws-rust/scripts/devbox/: dbx_init.sh
ws-rust/scripts/devbox/init/os_darwin/: override.sh
ws-rust/scripts/devbox/init/os_linux/: override.sh
ws-rust/scripts/devbox/lib/: common.sh
ws-rust/src/: lib.rs  main.rs  primes.rs
ws-rust/tests/: integration_test.rs
ws-zig/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.zig  devbox.json
(+35 files in other folders)
