[project]
name = "primes-cli"
version = "1.0.0"
description = "Prime number generator CLI — ws-python devbox workshop example"
license = { text = "Apache-2.0" }
authors = [{ name = "Patrick Paechnatz", email = "patrick@relicfrog.rocks" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
primes-cli = "primes_cli.main:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN", "S", "B", "A", "C4", "RUF"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
exclude = ["test_", "tests/"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "-v --tb=short"
